@@ -1,3 +1,5 @@
+17-01-06 mfp. Added protection to prevent circular inclusion.
+
 17-01-06 mfp. Added 'include' functionality, via use of
     preprocessor. Also modified the lexer/parser to disallow
     multi-line strings, which (up to very recently) were not
